--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,45 @@
-version: '3.8'
-
+# Docker Compose Configuration for Selenium Grid
+version: "3"
 services:
-   chrome:
-      image: selenium/standalone-chrome:latest
-      hostname: chrome
-      privileged: true
-      shm_size: 2g
-      ports:
-      - 4444:4444
-      restart: always
+
+  # Chrome Node
+  chrome:
+    image: selenium/node-chrome:4.16.0-20231206
+    shm_size: 2gb
+    depends_on:
+      - selenium-hub
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
       
-   firefox:
-      image: selenium/standalone-firefox:latest
-      hostname: firefox
-      privileged: true
-      shm_size: 2g
-      ports:
-      - 4441:4444  # Use a different port to avoid conflicts
-      restart: always
+  # Edge Node
+  edge:
+    image: selenium/node-edge:4.16.0-20231206
+    shm_size: 2gb
+    depends_on:
+      - selenium-hub
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      
+  # Firefox Node
+  firefox:
+    image: selenium/node-firefox:4.16.0-20231206
+    shm_size: 2gb
+    depends_on:
+      - selenium-hub
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
 
-
-# ------------------
-# Orphaned comments:
-
-#http://localhost:4444/ui
-#with yml start-> docker-compose up -d
-#end->docker-compose down
-
-#docker version-> docker -v
-#docker imeges installed--> docker images 
-#docker pull selenium/standalone-chrome:latest
-#running docker container->docker ps
-# 4444 port is good for both browser
-# ------------------
-#without yml file
-# docker run -d -p 4444:4444 selenium/standalone-chrome
-#docker run -d -p 4444:4444 selenium/standalone-firefox
-#  no need  docker run -d -p 4444:4444 -p 7900:7900 selenium/standalone-chrome
-#for firefox--> mvn test -Dbrowser=firefox
+  # Selenium Hub
+  selenium-hub:
+    image: selenium/hub:4.16.0-20231206
+    container_name: selenium-hub
+    ports:
+      - "4442:4442"
+      - "4443:4443"
+      - "4444:4444"
