--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 
-	<build>
+	<!--	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -21,9 +21,43 @@
 						</suiteXmlFiles>
 					</configuration>
 				</plugin>
+				
+				
+				
+				
+			</plugins>
+		</pluginManagement>
+	</build>-->
+
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.2.2</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>testng.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+				<plugin>
+
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.11.0</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+						<!-- Add any additional compiler configuration here -->
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
+
 
 	<dependencies>
 
@@ -86,7 +120,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.6.1</version>
+			<version>6.9.8</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
